--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gestor de Clientes</title>
-  <!-- Corregido el error 404 de favicon -->
-  <link rel="icon" href="/favicon.png" type="image/png">
+  <!-- CORRECCIÓN: Usamos ruta relativa para que funcione en subcarpetas de GitHub Pages -->
+  <link rel="icon" href="favicon.png" type="image/png"> 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   
