--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 
                 <!-- Info de Usuario (Placeholder) -->
                 <div class="flex items-center space-x-2">
-                    <span class="text-sm text-gray-600" id="user-id-display">Cargando...</span>
-                    <div class="h-8 w-8 rounded-full bg-gray-400"></div>
+                    <!-- El ID de usuario se ha quitado -->
+                    <div class="h-8 w-8 rounded-full bg-gray-400" title="Info de usuario"></div>
                 </div>
             </header>
 
@@ -100,7 +100,7 @@
 
                 <!-- Página: Dashboard -->
                 <div id="page-dashboard" class="page-content active">
-                    <h3 class="text-2xl font-semibold text-gray-700 mb-4">Bienvenido a tu Dashboard</h3>
+                    <!-- El mensaje de bienvenida se ha quitado -->
                     <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
                         <div class="rounded-lg bg-white p-5 shadow">
                             <h4 class="text-lg font-semibold text-gray-800">Total de Clientes</h4>
@@ -160,7 +160,7 @@
                     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Ajustes</h3>
                     <div class="rounded-lg bg-white p-5 shadow">
                         <p class="text-gray-600">Aquí irán las opciones de configuración de la cuenta y la aplicación.</p>
-                        <p class="mt-4 text-xs text-gray-400">ID de Usuario (para depuración): <code id="user-id-debug" class="bg-gray-200 p-1 rounded">...</code></p>
+                        <!-- El ID de depuración se ha quitado -->
                     </div>
                 </div>
 
