--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="rounded-2xl bg-white p-2 shadow-lg sm:p-4">
                         <div id="client-list-container" class="space-y-2">
-                            <p id="client-list-placeholder" class="text-center text-gray-500 p-8">No hay clientes para mostrar. Añade uno nuevo.</p>
+                            <p id="client-list-placeholder" class="text-center text-gray-500 p-8">No hay clientes que coincidan con el filtro.</p>
                         </div>
                     </div>
                 </div>
@@ -324,7 +324,7 @@
                             </p>
                             <div class="bg-teal-50 border-l-4 border-teal-500 text-teal-700 p-4 rounded-lg" role="alert">
                                 <p class="font-bold">Modo de Pruebas Activo</p>
-                                <p>Actualmente, la aplicación permite guardar clientes incluso si la autenticación anónima está pendiente, para facilitar las pruebas. Si necesitas seguridad, deberás restaurar la validación en <code>script.js</code>.</p>
+                                <p>Actualmente, la aplicación permite guardar clientes incluso si la autenticación anónima está pendiente, para facilitar las pruebas.</p>
                             </div>
                         </div>
                     </div>
